bug: Fix contrast on buttons to make them more accessible

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,9 +160,10 @@ nav h1 a {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
+  width: 100%;
 	height: auto;
-  min-width: 100%;
+  max-width: 800px;
+	max-height: 600px;
 }
 #restaurants-list li h1 {
   color: black;
@@ -179,8 +180,8 @@ nav h1 a {
 }
 #restaurants-list li a {
 	background-color: white;
-	color: #ccc;
-  border: 3px solid #ccc;
+	color: black;
+  border: 3px solid black;
 	font-weight: bold;
   display: inline-block;
   font-size: 0.9rem;
@@ -190,13 +191,13 @@ nav h1 a {
   text-decoration: none;
   text-transform: uppercase;
 	border-radius: 15px;
-  transition: border 0.5s;
-  transition: color 0.5s;
+  transition: background-color 0.3s;
+  transition: color 0.3s;
 }
 
 #restaurants-list li a:hover, #restaurants-list li a:focus{
-	  border: 3px solid black;
-		color: black;
+	  background-color: black;
+		color: white;
 }
 
 
